--- a/css/styles.css
+++ b/css/styles.css
@@ -46,13 +46,30 @@ body{
 .link{
     text-decoration: none;
 }
-.container{
-     width: 1158px;
-     padding: 0 15px; 
-     margin: 0 auto;
-     /* outline: 2px solid red; */
-     }
 
+     .container {
+  /* Phone styles & > */
+  min-width: 420px;
+  max-width: 428px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+
+  outline: 2px solid red;
+}
+/* Tablet styles & > */
+@media only screen and (min-width: 720px) {
+  .container {
+    max-width: 768px;
+  }
+}
+/* Desktop styles & > */
+@media only screen and (min-width: 1158px) {
+  .container {
+    max-width: 1200px;
+  }
+}
 /* ==========Шапка сайту HEADER========== */
 .container-header{
   display: flex;
@@ -161,13 +178,28 @@ transition: background-color var(--anim-fast);
     margin-left: auto;
     margin-right: auto;
     font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
+    font-size: 36px;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     color:var(--white); 
     max-width: 496px;
-    margin-bottom: 48px;
+    margin-bottom: 72px;
+    max-width: 320px;
  }
+ @media only screen and (min-width: 768px) {
+  .hero-title {
+   font-size: 56px;
+   line-height: 1.07;
+   margin-bottom: 40px;
+   max-width: 496px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .hero-title{
+  margin-bottom: 48px;
+  }
+}
 
 .btn{
  display: block;
@@ -202,9 +234,22 @@ padding: 120px 0 ;
 }
 .description-list{
     display: flex;
-    flex-wrap: wrap;
     gap: 24px;
    }
+   @media screen and (max-width: 767px) {
+  .description-list {
+    flex-direction: column;
+    gap: 72px;
+  }
+}
+ @media screen and (min-width: 768px) and (max-width: 1157px) {
+  .description-list {
+    flex-wrap: wrap;
+    gap: 24px;
+    row-gap: 72px;
+  }
+}
+ 
    .des-icon{
   display: flex;
   height: 112px;
@@ -214,16 +259,35 @@ padding: 120px 0 ;
   border-radius: 4px;
   margin-bottom: 8px;
 }
+@media only screen and (max-width: 1167px) {
+  .des-icon {
+    display: none;
+  }
+}
+
 .description-icon{
  margin: 24px ;
 }
 
-
-.stategy{
-    flex-basis:calc((100% - 72px) / 4);
+.stategy {
+  width: auto;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .stategy {
+    width: 356px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .stategy {
+    width: 264px;
+    /* flex-basis:calc((100% - 72px) / 4); */
+  }
+}
+
 .subtitle{
-font-weight: 500;
+font-weight: 700;
 font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
@@ -232,15 +296,26 @@ background-color: var(--white);
 margin-bottom: 8px;
 
 }
+@media screen and (min-width: 1158px) {
+  .subtitle {
+    font-weight: 500;
+  }
+}
+
 .team-subtitle{
 text-align: center;
 }
 .text{
-font-weight: 400;
+font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--slate);
+}
+@media screen and (min-width: 1158px) {
+  .text {
+    font-weight: 400;
+  }
 }
 .text-subtitle{
  text-align: center;   
@@ -252,6 +327,11 @@ color: var(--slate);
 }
 .work{
 padding-bottom: 120px; 
+}
+@media only screen and (max-width: 767px) {
+  .work {
+    display: none;
+  }
 }
 .list-work{
     display: flex;
