--- a/css/styles.css
+++ b/css/styles.css
@@ -459,10 +459,24 @@ flex-basis: calc((100% - 48px) / 3);
 }
 .list-people{
     display: flex;
-    gap: 24px;
+    /* gap: 24px;
     flex-basis: calc((100% - 72px) / 4);
+    width: 264px;
+    margin-left: auto;
+    margin-right: auto; */
     
 }
+@media screen and (max-width: 1157px) {
+    .list-people {
+      flex-wrap: wrap;
+      justify-content: center;
+      row-gap: 64px;
+      column-gap: 24px;
+      /* margin-left: 0;
+      margin-right: 0; */
+  }
+            }
+
 /* @media screen and (min-width:768px) {
     .list-people {
         display: flex;
@@ -477,16 +491,9 @@ flex-basis: calc((100% - 48px) / 3);
     background-color: var(--white);
    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
-    width: 264px;
-    margin-left: auto;
-    margin-right: auto;
+    
      }
-@media screen and (max-width: 767px) {
-    .team-group {
-      margin-left: 0;
-      margin-right: 0;
-  }
-            }
+
   /* .team-group:not(:last-child) {
     margin-bottom: 72px;
 }
