--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,6 @@ body{
   margin-right: auto;
   padding-left: 16px;
   padding-right: 16px;
-
   outline: 2px solid red;
 }
 /* Tablet styles & > */
@@ -461,7 +460,7 @@ flex-basis: calc((100% - 48px) / 3);
  background-color:var(--cloud);
  padding-top: 96px;
  padding-bottom: 96px;
-  outline: 2px solid red;
+ 
 }
 @media screen and (min-width:1158px) {
     .team {
@@ -590,12 +589,27 @@ margin-bottom: 72px;
     color: var(--navy-blue);
     margin-bottom: 72px;
 }
-.customers{
+/* .customers{
  display: flex; 
  gap: 24px;
  height: 88px;
  justify-content: center;
+} */
+.clients {
+  display: flex;
+  gap: 16px;
+  row-gap: 72px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
+
+@media screen and (min-width: 768px) {
+  .clients {
+    gap: 24px;
+    row-gap: 72px;
+  }
+}
+
 .partner-border{
     display: flex;
     align-items: center;
@@ -609,10 +623,15 @@ margin-bottom: 72px;
     transition: color var(--anim-fast),border-color var(--anim-fast);
 }
 
-.customers-item{
+/* .customers-item{
 width: calc((100% - 120px) / 6);
  height:88px; 
 
+} */
+@media screen and (max-width: 767px) {
+  .customers-item {
+    flex-basis: calc((100% - 16px) / 2);
+  }
 }
 
 .partner-border:hover,
@@ -622,10 +641,18 @@ width: calc((100% - 120px) / 6);
 }
 
 
+
 /* ==========FOOTER========== */
 .footer-stile{
 background:var(--navy-blue);
-padding: 100px 0;
+padding-top: 96px;
+padding-bottom: 96px;
+}
+@media screen and (min-width: 1158px) {
+  .footer-stile {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
 .logo-footer{
     color:var(--cloud);}
@@ -635,7 +662,11 @@ padding: 100px 0;
     margin-bottom: 16px;
     margin-right: 0;
  }  
-
+@media screen and (max-width: 767px) {
+  .footers {
+    text-align: center;
+  }
+}
 .text-footer{
 font-weight: 400;
 font-size: 16px;
@@ -672,11 +703,43 @@ border: 1px solid var(--cornflower);
 }
 .container-footer{
  display: flex;
-   align-items: baseline
+   /* align-items: baseline */
 }
-.footer-logo{
- margin-right: 120px;
+
+@media screen and (max-width: 767px) {
+  .container-footer {
+    flex-direction: column;
+    align-items: center;
+    gap: 72px;
+  }
 }
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .container-footer {
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 72px;
+    padding-left: 108px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .container-footer {
+    align-items: baseline;
+  }
+}
+
+.footer-logo {
+  width: 268px;
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-logo {
+    display: block;
+    margin-right: 120px;
+  }
+}
+
+
 .footer-media{
 font-weight: 500;
 font-size: 16px;
@@ -685,6 +748,11 @@ letter-spacing: 0.02em;
 color:var(--white);
  margin-bottom: 16px;
 
+}
+@media screen and (max-width: 767px) {
+  .footer-media {
+    text-align: center;
+  }
 }
 .footer-social{
  
@@ -713,9 +781,22 @@ display: flex;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
  
 }
-.footer-input {
-  margin-left: auto;
+
+@media screen and (max-width: 767px) {
+  .footer-input {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    text-align: center;
+  }
 }
+
+@media screen and (min-width: 1158px) {
+  .footer-input {
+    margin-left: auto;
+  }
+}
+
 
 .footer-input-label {
   display: block;
@@ -726,43 +807,70 @@ display: flex;
   color: var(--color-white);
   margin-bottom: 16px;
 }
+@media screen and (min-width: 768px) {
+  .footer-input-label {
+    margin-bottom: 16px;
+  }
+}
 
-.footer-form-div {
+/* .footer-form-div {
   display: flex;
   gap: 24px;
+} */
+
+@media screen and (min-width: 768px) {
+  .footer-form-div {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-form-div {
+    display: flex;
+  }
 }
 
 .footer-input-email {
-  display: block;
-  width: 264px;
-  height: 40px;
+  width: auto;
+  min-height: 40px;
   padding: 8px 16px;
-  background-color: var(--navy-blue);
-
-  border: 1px solid var(--white);
+  background: #2e2f42;
+  border: 1px solid #ffffff;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-
+  letter-spacing: 0.04em;
   font-weight: 400;
   font-size: 12px;
   line-height: 2;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.04em;
-  color: var(--white);
-  outline: 1px solid transparent;
-  outline-offset: -1px;
-
-  transition-property: outline-color;
-  transition-duration: 250px;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  color: #ffffff;
+  outline: transparent;
+}
+@media screen and (min-width: 320px) and (max-width: 428px) {
+  .footer-input-email{
+    margin-bottom: 16px;
+  }
 }
 
+
+@media screen and (min-width: 428px) {
+  .ooter-input-email {
+    width: 398px;
+    margin-bottom: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .ooter-input-email {
+    width: 264px;
+    margin-right: 24px;
+  }
+}
 .footer-input-email[type='email']::placeholder {
   color:var(--white);
   opacity: 1;
 }
 
-.footer-input-btn {
+/* .footer-input-btn {
   display: flex;
   justify-content: center;
   gap: 16px;
@@ -780,7 +888,32 @@ display: flex;
   padding: 8px 24px;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+} */
+.footer-input-btn {
+  font-weight: 500;
+  display: flex;
+  line-height: 1.5;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 8px 24px;
+  letter-spacing: 0.04em;
+  background: #4d5ae5;
+  border-radius: 4px;
+  color: #ffffff;
+  padding: 8px 24px;
+  border: none;
+  cursor: pointer;
+  gap: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+@media screen and (max-width: 767px) {
+  .footer-input-btn {
+    margin: 0 auto;
+  }
+}
+
 .footer-input-btn:hover,
 .footer-input-btn:focus {
   background-color: var(--ocean);
