--- a/css/styles.css
+++ b/css/styles.css
@@ -1020,19 +1020,23 @@ display: flex;
 }
 .modal {
   position: absolute;
-  top:50%;
-  left:50%;
-
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 408px;
-  
-  transform: translate(-50%,-50%) rotate(0) scale(1);
-  padding: 72px 24px 24px;
-
-  background-color: #FFFFFF;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  padding: 72px 24px 24px;
+}
 
-  transition: transform 300ms linear 200ms, opacity 300ms linear 200ms;
+@media screen and (max-width: 767px) {
+  .modal {
+    width: 392px;
+    padding: 72px 16px 24px;
+  }
 }
 .modal-btn {
  position: absolute;
