--- a/css/styles.css
+++ b/css/styles.css
@@ -394,24 +394,38 @@ padding: 120px 0 ;
   }
 }
 
-.subtitle{
-font-weight: 700;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-color: var(--navy-blue);
-background-color: var(--white);
-margin-bottom: 8px;
-
+.subtitle {
+  margin-top: 0;
+  margin-bottom: 8px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
 }
+
+@media screen and (max-width: 767px) {
+  .subtitle {
+    text-align: center;
+  }
+}
+
 @media screen and (min-width: 1158px) {
   .subtitle {
     font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
   }
 }
 
 .team-subtitle{
-text-align: center;
+
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    text-align: center;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+    color: #2e2f42;
 }
 .text{
 font-weight: 500;
@@ -428,6 +442,7 @@ color: var(--slate);
 .text-subtitle{
  text-align: center;   
  margin-bottom: 8px;
+
 }
 /* ========== 3 секція What are we doing========== */
 .container-work{
@@ -536,7 +551,7 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 color: var(--navy-blue);
-background-color:var(--white); 
+/* background-color:var(--white);  */
 margin-bottom: 72px;
 
 }
@@ -658,7 +673,8 @@ padding-bottom: 96px;
     color:var(--cloud);}
 
    .footers
-   {display: inline-block;
+
+   {display: block;
     margin-bottom: 16px;
     margin-right: 0;
  }  
