залишилась кнопка "бургер"

--- a/css/styles.css
+++ b/css/styles.css
@@ -864,19 +864,21 @@ display: flex;
 @media screen and (min-width: 320px) and (max-width: 428px) {
   .footer-input-email{
     margin-bottom: 16px;
+    width: auto;
+    
   }
 }
 
 
 @media screen and (min-width: 428px) {
-  .ooter-input-email {
+  .footer-input-email {
     width: 398px;
     margin-bottom: 16px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .ooter-input-email {
+  .footer-input-email {
     width: 264px;
     margin-right: 24px;
   }
