--- a/css/styles.css
+++ b/css/styles.css
@@ -136,12 +136,22 @@ body{
     
   }
 
-    @media only screen and (max-width: 767px) {
+    /* @media only screen and (max-width: 767px) {
   .list-mobile {
     display: none;
   }
-}
+} */
 
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .list-mobile {
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    gap: 12px;
+  }
+}
 .logo-naim{
     color:var(--navy-blue);
 }
