--- a/css/styles.css
+++ b/css/styles.css
@@ -49,16 +49,16 @@ body{
 
      .container {
   /* Phone styles & > */
-  min-width: 320px;
+  /* min-width: 320px; */
   max-width: 428px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 16px;
   padding-right: 16px;
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 }
 /* Tablet styles & > */
-@media only screen and (min-width: 720px) {
+@media only screen and (min-width: 768px) {
   .container {
     max-width: 768px;
   }
@@ -66,7 +66,9 @@ body{
 /* Desktop styles & > */
 @media only screen and (min-width: 1158px) {
   .container {
-    max-width: 1200px;
+    max-width: 1158x;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 .section {
@@ -136,11 +138,11 @@ body{
     
   }
 
-    /* @media only screen and (max-width: 767px) {
+    @media only screen and (max-width: 767px) {
   .list-mobile {
     display: none;
   }
-} */
+}
 
 @media screen and (min-width: 768px) and (max-width: 1157px) {
   .list-mobile {
@@ -278,7 +280,7 @@ transition: background-color var(--anim-fast);
     }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
     .hero {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
             url("..//images/hero-des@1x.jpg");
