--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,14 @@ body{
     max-width: 768px;
   }
 }
+
+/* @media only screen and (min-width: 768px) and (max-width: 1157px) {
+  .container {
+    max-width: 768px;
+  }
+} */
+
+
 /* Desktop styles & > */
 @media only screen and (min-width: 1158px) {
   .container {
@@ -1320,6 +1328,11 @@ input[type='checkbox']:checked
 
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
+}
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: none;
+  }
 }
 
 .menu-container.is-open {
