--- a/css/styles.css
+++ b/css/styles.css
@@ -106,12 +106,12 @@ body{
 }
 
 .page-navigation{
-    display: flex;
+    /* display: flex; */
     align-items: center; 
    
 }
 .logo{
-    margin-right: 76px;
+    /* margin-right: 76px; */
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
     font-size: 18px;
@@ -206,8 +206,8 @@ transition: background-color var(--anim-fast);
 .contact-link{
  display: flex;
  align-items: center;
- font-size: 16px;
- line-height: 1.5;
+ font-size: 12px;
+ line-height: 1.17;
  letter-spacing: 0.02em;
  color: var(--slate);
  transition: color var(--anim-fast);
@@ -366,7 +366,7 @@ transition: background-color var(--anim-fast);
 display: flex;
 }
 .description{
-padding: 120px 0 ;
+padding: 96px 0 ;
 }
 .description-list{
     display: flex;
@@ -593,8 +593,8 @@ margin-bottom: 72px;
 
 /* ==========5 секція Customers========== */
 .customers-section{
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 .customers-icon{
       fill: currentColor;
@@ -626,14 +626,14 @@ margin-bottom: 72px;
 }
 
 .partner-border{
-  display: block;
+  /* display: block; */
   width: 190px;
-    /* display: flex; */
+    display: flex;
     align-items: center;
     justify-content: center;
     background-color: var(--white);
     color: var(--light-slate);
-    height: 100%;
+    /* height: 520px; */
     border: 1px solid var(--light-slate);
     border-radius: 4px;
     gap: 24px;
@@ -814,7 +814,7 @@ display: flex;
   .footer-input {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    /* gap: 16px; */
     text-align: center;
   }
 }
@@ -1119,8 +1119,10 @@ display: flex;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
 
-  outline: 2px solid transparent;
-  outline-offset: -2px;
+  /* outline: 2px solid transparent; */
+  border-color: 2px solid transparent;
+  /* outline-offset: -2px; */
+  
 
   transition-property: outline-color;
   transition-duration: 250ms;
@@ -1129,7 +1131,7 @@ display: flex;
 
 .modal-form-input:hover,
 .modal-form-input:focus {
-  outline-color: var(--iris);
+  border-color: var(--iris);
 }
 
 .modal-icons {
@@ -1355,7 +1357,7 @@ input[type='checkbox']:checked
 
 .mobile-menu-items {
   display: block;
-  padding: 10px;
+  /* padding: 10px; */
   color: var(--navy-blue-modal);
   text-decoration: none;
 
@@ -1363,9 +1365,12 @@ input[type='checkbox']:checked
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
-  padding-bottom: 40px;
+  /* padding-bottom: 40px; */
 }
+.mobile-new{
+  margin-bottom: 40px;
 
+}
 .mobile-menu-items::after {
   content: '';
   display: block;
@@ -1380,17 +1385,20 @@ input[type='checkbox']:checked
 
 .mobile-burger-tel {
   display: block;
+  text-decoration: none;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--iris);
-  padding-bottom: 40px;
+  /* padding-bottom: 40px; */
+  margin-bottom: 40px;
 }
 
 .mobile-burger-mail {
   font-weight: 500;
+  text-decoration: none;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
@@ -1404,5 +1412,5 @@ input[type='checkbox']:checked
 .mobile-social {
   display: flex;
   gap: 56px;
-  justify-content: center;
+  /* justify-content: center; */
 }
