--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ body{
   margin-right: auto;
   padding-left: 16px;
   padding-right: 16px;
-  /* outline: 2px solid red; */
+  outline: 2px solid red;
 }
 /* Tablet styles & > */
 @media only screen and (min-width: 768px) {
@@ -106,7 +106,7 @@ body{
 }
 
 .page-navigation{
-    /* display: flex; */
+    display: flex;
     align-items: center; 
    
 }
@@ -120,10 +120,24 @@ body{
     text-transform: uppercase;
     color: var(--iris);
 }
-/* 
+@media screen and (max-width: 767px) {
+  .logo {
+    padding-top: 24px;
+    padding-bottom: 22px;
+  }
+}
 
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .logo {
+    margin-right: 96px;
+  }
+}
 
-*/
+@media screen and (min-width: 1158px) {
+  .logo {
+    margin-right: 120px;
+  }
+}
 
 .nav-list {
   display: flex;
@@ -595,6 +609,13 @@ margin-bottom: 72px;
 .customers-section{
     padding-top: 96px;
     padding-bottom: 96px;
+    outline: 2px solid lime;
+   /* position: absolute; */
+/* width: 552px;
+height: 360px;
+left: 108px;
+top: 2337px; */
+
 }
 .customers-icon{
       fill: currentColor;
@@ -616,6 +637,11 @@ margin-bottom: 72px;
   row-gap: 72px;
   flex-wrap: wrap;
   justify-content: center;
+  position: absolute;
+width: 552px;
+height: 360px;
+left: 108px;
+top: 2337px;  
 }
 
 @media screen and (min-width: 768px) {
@@ -1124,7 +1150,7 @@ display: flex;
   /* outline-offset: -2px; */
   
 
-  transition-property: outline-color;
+  transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
