--- a/css/styles.css
+++ b/css/styles.css
@@ -637,11 +637,11 @@ top: 2337px; */
   row-gap: 72px;
   flex-wrap: wrap;
   justify-content: center;
-  position: absolute;
+  /* position: absolute;
 width: 552px;
 height: 360px;
 left: 108px;
-top: 2337px;  
+top: 2337px;   */
 }
 
 @media screen and (min-width: 768px) {
