--- a/css/styles.css
+++ b/css/styles.css
@@ -927,22 +927,26 @@ display: flex;
 }
 
 .footer-input-btn {
-  font-weight: 500;
-  display: flex;
-  line-height: 1.5;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 8px 24px;
-  letter-spacing: 0.04em;
-  background: #4d5ae5;
-  border-radius: 4px;
-  color: #ffffff;
-  padding: 8px 24px;
-  border: none;
-  cursor: pointer;
-  gap: 16px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    max-width: 165px;
+    max-height: 40px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    align-items: center;
+    color: var(--white);
+    background-color: var(--iris);
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 8px 24px;
+    border: none;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (max-width: 767px) {
