--- a/css/styles.css
+++ b/css/styles.css
@@ -39,9 +39,9 @@ body{
     }
 .list{
     list-style: none;
-    /* display: flex;
+    display: flex;
     align-items: center;
-    gap: 40px; */
+    gap: 40px;
 }
 .link{
     text-decoration: none;
@@ -71,6 +71,8 @@ body{
 @media only screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
+margin-left: auto;
+  margin-right: auto;
   }
 }
 
@@ -100,10 +102,6 @@ body{
   justify-content: space-between;
 }
 
-.header-container {
-  display: flex;
-  align-items: center;
-}
 .page-navigation{
     display: flex;
     align-items: center; 
