--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,8 @@ body{
     max-width: 1158px;
 margin-left: auto;
   margin-right: auto;
+padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
@@ -541,6 +543,7 @@ padding-bottom: 120px;
 }
 
 .title-work{
+  display: block;
 flex-basis: calc((100% - 48px) / 3);
 }
 
@@ -759,7 +762,7 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color:  var(--cloud);
-width: 264px;
+/* width: 264px; */
 }
 /* ==========FOOTER========== */
 .scrolls{
