--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,8 @@ body{
 @media only screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
 
