--- a/css/styles.css
+++ b/css/styles.css
@@ -68,11 +68,13 @@ body{
 }
 
 /* Tablet styles */
-@media only screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
-    padding-left: 16px;
-    padding-right: 16px;
+padding-left: 16px;
+  padding-right: 16px;
+margin-left: auto;
+  margin-right: auto;
   }
 }
 
@@ -546,7 +548,9 @@ padding-bottom: 120px;
 
 .title-work{
   display: block;
-flex-basis: calc((100% - 48px) / 3);
+  display: block;
+  width: 360px;
+/* flex-basis: calc((100% - 48px) / 3); */
 }
 
 /* ========== 4 секція TEAM========== */
