--- a/css/styles.css
+++ b/css/styles.css
@@ -711,7 +711,11 @@ top: 2337px;   */
     width: 100%;
   }
 }
-
+@media screen and (min-width: 768px) {
+  .partner-border {
+    width: 168px;
+  }
+}
 @media screen and (min-width: 1158px) {
   .partner-border {
     width: 168px;
