--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,16 @@ body{
 
   /* outline: 2px solid tomato; */
 }
+@media only screen and (max-width: 767px) {
+  .container {
+    min-width: 320px;
+  max-width: 428px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+  }
+}
 
 /* Tablet styles */
 @media screen and (min-width: 768px) {
